--- a/bus-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/bus-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -28,7 +28,7 @@
         <errai.version>${errai.target.version}</errai.version>
         <gwt.version>2.3.0</gwt.version>
         <gwt.maven.version>2.3.0</gwt.maven.version>
-        <slf4j.version>1.5.10</slf4j.version>
+        <slf4j.version>1.6.1</slf4j.version>
         <webXmlPath>src/jetty/web.xml</webXmlPath>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -129,9 +129,9 @@
                 </dependency>
 
                 <dependency>
-                    <groupId>javassist</groupId>
+                    <groupId>org.javassist</groupId>
                     <artifactId>javassist</artifactId>
-                    <version>3.12.1.GA</version>
+                    <version>3.15.0-GA</version>
                     <scope>provided</scope>
                 </dependency>
             </dependencies>
@@ -183,9 +183,9 @@
                 </dependency>
 
                 <dependency>
-                    <groupId>javassist</groupId>
+                    <groupId>org.javassist</groupId>
                     <artifactId>javassist</artifactId>
-                    <version>3.12.1.GA</version>
+                    <version>3.15.0-GA</version>
                     <scope>provided</scope>
                 </dependency>
             </dependencies>
