--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -19,7 +19,7 @@
     <gwt.maven.version>2.3.0</gwt.maven.version>
     <mvel.version>2.1.Beta6</mvel.version>
     <jetty.version>6.1.25</jetty.version>
-    <slf4j.version>1.5.11</slf4j.version>
+    <slf4j.version>1.6.1</slf4j.version>
     <uel.impl.version>2.1.2-b04</uel.impl.version>
     <webDescriptor>jetty</webDescriptor>
   </properties>
@@ -349,9 +349,9 @@
           <scope>provided</scope>
         </dependency>
         <dependency>
-          <groupId>javassist</groupId>
+          <groupId>org.javassist</groupId>
           <artifactId>javassist</artifactId>
-          <version>3.12.1.GA</version>
+          <version>3.15.0-GA</version>
           <scope>provided</scope>
         </dependency>
 
@@ -558,9 +558,9 @@
         </dependency>
 
         <dependency>
-          <groupId>javassist</groupId>
+          <groupId>org.javassist</groupId>
           <artifactId>javassist</artifactId>
-          <version>3.12.1.GA</version>
+          <version>3.15.0-GA</version>
           <scope>provided</scope>
         </dependency>
 
@@ -768,9 +768,9 @@
         </dependency>
 
         <dependency>
-          <groupId>javassist</groupId>
+          <groupId>org.javassist</groupId>
           <artifactId>javassist</artifactId>
-          <version>3.12.1.GA</version>
+          <version>3.15.0-GA</version>
           <scope>provided</scope>
         </dependency>
 
@@ -985,9 +985,9 @@
         </dependency>
 
         <dependency>
-          <groupId>javassist</groupId>
+          <groupId>org.javassist</groupId>
           <artifactId>javassist</artifactId>
-          <version>3.12.1.GA</version>
+          <version>3.15.0-GA</version>
           <scope>provided</scope>
         </dependency>
 
