--- a/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>${groupId}</groupId>
-   <artifactId>${artifactId}</artifactId>
-   <version>${version}</version>
+   <groupId>\${groupId}</groupId>
+   <artifactId>\${artifactId}</artifactId>
+   <version>\${version}</version>
    <packaging>war</packaging>
    <name>JBoss AS Quickstarts: Errai kitchensink</name>
    <description>A starter Java EE 6 webapp project for use on JBoss AS 7 / EAP 6, generated from the jboss-javaee6-webapp archetype</description>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-web-6.0</artifactId>
-            <version>${javaee6.web.spec.version}</version>
+            <version>\${javaee6.web.spec.version}</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
@@ -173,7 +173,7 @@
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-bus</artifactId>
-        <version>${errai.version}</version>
+        <version>\${errai.version}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.inject</groupId>
@@ -188,7 +188,7 @@
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-ioc</artifactId>
-        <version>${errai.version}</version>
+        <version>\${errai.version}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.inject</groupId>
@@ -203,39 +203,32 @@
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-tools</artifactId>
-        <version>${errai.version}</version>
+        <version>\${errai.version}</version>
       </dependency>
       <dependency>
         <groupId>org.mvel</groupId>
         <artifactId>mvel2</artifactId>
-        <version>${mvel.version}</version>
+        <version>\${mvel.version}</version>
       </dependency>
 
       <!-- Errai CDI Integration Modules -->
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-cdi-client</artifactId>
-        <version>${errai.version}</version>
+        <version>\${errai.version}</version>
       </dependency>
   
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-javax-enterprise</artifactId>
-        <version>${errai.version}</version>
+        <version>\${errai.version}</version>
         <scope>provided</scope>
       </dependency>
   
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-weld-integration</artifactId>
-        <version>${errai.version}</version>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.jboss.weld.servlet</groupId>
-        <artifactId>weld-servlet</artifactId>
-        <version>1.1.0.Final</version>
-        <scope>provided</scope>
+        <version>\${errai.version}</version>
       </dependency>
       
       <!-- gwt-user is required at runtime because we use some of the client/server shared
@@ -243,20 +236,20 @@
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
-        <version>${gwt.version}</version>
+        <version>\${gwt.version}</version>
         <scope>compile</scope>
       </dependency>
   
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-dev</artifactId>
-        <version>${gwt.version}</version>
+        <version>\${gwt.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>jboss7-support</artifactId>
-        <version>${errai.version}</version>
+        <version>\${errai.version}</version>
       </dependency>
       <!-- End of Errai dependencies -->
 
@@ -284,7 +277,7 @@
    <build>
       <!-- Maven will append the version to the finalName (which is the name 
          given to the generated war, and hence the context root) -->
-      <finalName>${project.artifactId}</finalName>
+      <finalName>\${project.artifactId}</finalName>
       <plugins>
          <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
             annotation processors -->
@@ -318,7 +311,7 @@
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>gwt-maven-plugin</artifactId>
-            <version>${gwt.maven.version}</version>
+            <version>\${gwt.maven.version}</version>
             <configuration>
                <inplace>true</inplace>
                <logLevel>INFO</logLevel>
