--- a/kitchensink-quickstart/pom.xml
+++ b/kitchensink-quickstart/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jboss.errai.archetypes</groupId>
     <artifactId>archetypes-parent</artifactId>
-    <version>2.0.1.Final</version>
+    <version>2.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>kitchensink-quickstart</artifactId>
