--- a/jaxrs-quickstart/pom.xml
+++ b/jaxrs-quickstart/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.jboss.errai.archetypes</groupId>
         <artifactId>archetypes-parent</artifactId>
-        <version>2.0.2.Final</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jaxrs-quickstart</artifactId>
