--- a/cdi-quickstart/pom.xml
+++ b/cdi-quickstart/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jboss.errai.archetypes</groupId>
 		<artifactId>archetypes-parent</artifactId>
-		<version>2.1.0.CR1</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>cdi-quickstart</artifactId>
