--- a/bus-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/bus-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -81,6 +81,11 @@
             <version>\${gwt.version}</version>
         </dependency>
         -->
+         <dependency>
+             <groupId>org.slf4j</groupId>
+             <artifactId>slf4j-log4j12</artifactId>
+             <version>\${slf4j.version}</version>
+         </dependency>
 
         <!-- For testing -->
         <dependency>
