--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -36,6 +36,7 @@
     <gwt.version>2.4.0</gwt.version>
     <gwt.maven.version>2.4.0</gwt.maven.version>
     <slf4j.version>1.6.1</slf4j.version>
+    <resteasy.version>2.3.5.Final</resteasy.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -87,7 +88,7 @@
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-jaxrs</artifactId>
-      <version>2.2.3.GA</version>
+      <version>\${resteasy.version}</version>
     </dependency>
 
     <dependency>
@@ -234,14 +235,14 @@
         <dependency>
           <groupId>org.jboss.resteasy</groupId>
           <artifactId>resteasy-jaxrs</artifactId>
-          <version>2.2.3.GA</version>
+          <version>\${resteasy.version}</version>
           <scope>provided</scope>
         </dependency>
         
         <dependency>
           <groupId>org.jboss.resteasy</groupId>
           <artifactId>jaxrs-api</artifactId>
-          <version>2.2.3.GA</version>
+          <version>\${resteasy.version}</version>
           <scope>provided</scope>
         </dependency>
       </dependencies>
@@ -258,7 +259,7 @@
         <dependency>
           <groupId>org.jboss.resteasy</groupId>
           <artifactId>resteasy-jaxrs</artifactId>
-          <version>2.2.3.GA</version>
+          <version>\${resteasy.version}</version>
           <scope>provided</scope>
         </dependency>
       </dependencies>
