--- a/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
@@ -16,6 +16,8 @@
     <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
       resources, i.e. build is platform dependent! -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
 
     <!-- Define the version of JBoss' Java EE 6 APIs we want to import. Any 
       dependencies from org.jboss.spec will have their version defined by this 
@@ -366,16 +368,6 @@
 
   <build>
     <plugins>
-      <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
-        annotation processors -->
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.1.1</version>
