--- a/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
@@ -11,10 +11,11 @@
   <description>A starter Java EE 6 webapp project for use on JBoss AS 7 / EAP 6, generated from the jboss-javaee6-webapp archetype</description>
 
   <properties>
-    <!-- Explicitly declaring the source encoding eliminates the following 
-      message: -->
-    <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
-      resources, i.e. build is platform dependent! -->
+    <!--
+      Explicitly declaring the source encoding eliminates the message:
+      [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
+       resources, i.e. build is platform dependent!
+    -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
@@ -24,28 +25,26 @@
       BOM -->
 #if ($enterprise == "true" || $enterprise == "y" || $enterprise == "yes" )
     <!-- Certified version of the JBoss EAP components we want to use -->
-    <version.org.jboss.spec.jboss.javaee6>3.0.0.Final-redhat-1</version.org.jboss.spec.jboss.javaee6>
-    <version.org.jboss.bom.errai>1.0.0.M12-redhat-1</version.org.jboss.bom.errai>
+    <version.org.jboss.spec.jboss.javaee6>3.0.2.Final-redhat-1</version.org.jboss.spec.jboss.javaee6>
+    <version.org.jboss.bom.errai>1.0.5.CR1-redhat-1</version.org.jboss.bom.errai>
     <!-- Alternatively, comment out the above line, and un-comment the line 
-      below to use version 3.0.0.Final which is based on community built dependencies. 
+      below to use version 3.0.2.Final which is based on community built dependencies. 
       You can actually use this stack with any version of JBoss AS that implements 
       the Java EE 6 web profile -->
-    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.0.Final</version.org.jboss.spec.jboss.javaee6> -->
-    <version.org.jboss.errai>${errai.target.version}</version.org.jboss.errai>
-    <version.com.google.gwt>2.4.0</version.com.google.gwt>
-    <version.org.codehaus.mojo.gwt.maven.plugin>\${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
+    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.2.Final</version.org.jboss.spec.jboss.javaee6> -->
 #else
-    <version.org.jboss.spec.jboss.javaee6>3.0.0.Final</version.org.jboss.spec.jboss.javaee6>
-    <version.org.jboss.bom.errai>1.0.0.M12</version.org.jboss.bom.errai>
+    <version.org.jboss.spec.jboss.javaee6>3.0.2.Final</version.org.jboss.spec.jboss.javaee6>
+    <version.org.jboss.bom.errai>1.0.5.CR1</version.org.jboss.bom.errai>
     <!-- Alternatively, comment out the above line, and un-comment the line 
-      below to use version 3.0.0.Final-redhat-1 which is a release certified to 
+      below to use version 3.0.2.Final-redhat-1 which is a release certified to 
       work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 maven 
       repository. -->
-    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.0.Final-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
-    <version.org.jboss.errai>${errai.target.version}</version.org.jboss.errai>
-    <version.com.google.gwt>2.4.0</version.com.google.gwt>
-    <version.org.codehaus.mojo.gwt.maven.plugin>\${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
+    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.2.Final-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
 #end
+
+    <!-- This version is specified here because Maven plugin versions can't be managed by BOMs. -->
+    <version.org.codehaus.mojo.gwt.maven.plugin>2.4.0</version.org.codehaus.mojo.gwt.maven.plugin>
+
   </properties>
 
   <dependencyManagement>
@@ -73,87 +72,6 @@
          <scope>import</scope>
      </dependency>
 
-      <!-- Errai Core and ErraiBus -->
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-bus</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-ioc</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-tools</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <!-- Errai JAX-RS -->
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-jaxrs-client</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-jaxrs-provider</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <!-- Errai CDI Integration Modules -->
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-cdi-client</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-javax-enterprise</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-weld-integration</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.google.gwt</groupId>
-        <artifactId>gwt-user</artifactId>
-        <version>\${version.com.google.gwt}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.google.gwt</groupId>
-        <artifactId>gwt-dev</artifactId>
-        <version>\${version.com.google.gwt}</version>
-      </dependency>
-
       <!-- Test dependencies -->
       <dependency>
         <groupId>junit</groupId>
@@ -170,7 +88,7 @@
     <!-- First declare the APIs we depend on and need for compilation. All 
       of them are provided by JBoss AS 7 -->
 
-    <!-- Import the CDI API, we use provided scope as the API is included 
+    <!-- Import the CDI API. We use provided scope as the API is included 
       in JBoss AS 7 -->
     <dependency>
       <groupId>javax.enterprise</groupId>
@@ -178,7 +96,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Import the JPA API, we use provided scope as the API is included 
+    <!-- Import the JPA API. We use provided scope as the API is included 
       in JBoss AS 7 -->
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
@@ -186,7 +104,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Import the Common Annotations API (JSR-250), we use provided scope 
+    <!-- Import the Common Annotations API (JSR-250). We use provided scope 
       as the API is included in JBoss AS 7 -->
     <dependency>
       <groupId>org.jboss.spec.javax.annotation</groupId>
@@ -194,7 +112,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Import the JAX-RS API, we use provided scope as the API is included 
+    <!-- Import the JAX-RS API. We use provided scope as the API is included 
       in JBoss AS 7 -->
     <dependency>
       <groupId>org.jboss.spec.javax.ws.rs</groupId>
@@ -202,7 +120,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Import the JPA API, we use provided scope as the API is included 
+    <!-- Import the JPA API. We use provided scope as the API is included 
       in JBoss AS 7 -->
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
@@ -210,7 +128,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Import the EJB API, we use provided scope as the API is included 
+    <!-- Import the EJB API. We use provided scope as the API is included 
       in JBoss AS 7 -->
     <dependency>
       <groupId>org.jboss.spec.javax.ejb</groupId>
@@ -219,7 +137,7 @@
     </dependency>
 
     <!-- Import the Bean Validation API, which is used both on the server 
-      and the client. -->
+      and in the client-side code that's translated to JavaScript. -->
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
@@ -262,72 +180,13 @@
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
-      <version>1.0.0.GA</version>
       <classifier>sources</classifier>
     </dependency>
 
     <!-- The next set of dependencies are for Errai -->
     <dependency>
       <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-bus</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>javax.inject</groupId>
-          <artifactId>javax.inject</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>javax.annotation</groupId>
-          <artifactId>jsr250-api</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-ioc</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>javax.inject</groupId>
-          <artifactId>javax.inject</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>javax.annotation</groupId>
-          <artifactId>jsr250-api</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-tools</artifactId>
-    </dependency>
-
-    <!-- Errai CDI Integration Modules -->
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-cdi-client</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-javax-enterprise</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-weld-integration</artifactId>
-
-      <exclusions>
-        <!-- errai-cdi-jetty is only required for integration testing -->
-        <exclusion>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-cdi-jetty</artifactId>
-        </exclusion>
-
-        <exclusion>
-          <groupId>org.jboss.weld.servlet</groupId>
-          <artifactId>weld-servlet</artifactId>
-        </exclusion>
-      </exclusions>
+      <artifactId>errai-javaee-all</artifactId>
     </dependency>
 
     <!-- gwt-user is required at runtime because we use some of the client/server 
