--- a/cordova-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cordova-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -31,6 +31,21 @@
     <version.org.codehaus.mojo.gwt.maven.plugin>${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>jboss-public-repository</id>
+      <name>JBoss Repository</name>
+      <url>http://repository.jboss.org/nexus/content/groups/public</url>
+      <!-- These optional flags are designed to speed up your builds 
+        by reducing remote server calls -->
+      <releases>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <dependencyManagement>
     <dependencies>
       <!-- JBoss distributes a complete set of Java EE 6 APIs including a 
